Update tooling with CLI lib and more args